add tailwind config

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,17 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
-    margin: 0;
-    font-family: "Zilla Slab", serif;
-    background-color: black;
-    color: white
-  }
-  
-  .App {
-    text-align: center;
-    color: #845ec2;
-    font-weight: 600;
-    font-size: 1.1rem;
-  }
+  margin: 0;
+  font-family: "Zilla Slab", serif;
+  background-color: black;
+  color: white;
+}
+
+.App {
+  text-align: center;
+  color: #845ec2;
+  font-weight: 600;
+  font-size: 1.1rem;
+}
