--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,5 @@
 #root {
   text-align: center;
-}
-.nav {
-  background-color: grey;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
