--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,10 @@ body {
 
 .App {
   text-align: center;
-  color: #845ec2;
   font-weight: 600;
   font-size: 1.1rem;
+}
+
+.header {
+  font-family: zilla;
 }
